--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../static/css/home.css">
+    <link rel="stylesheet" href="../../static/css/home.css" th:href="@{/css/home.css}">
     <title>Document</title>
 </head>
 <body>
@@ -13,15 +13,15 @@
 <div>
     <div class="container">
         <div class="grid">
-            <a th:href="@{/search}" class="button">Crea nuovo</a>
+            <a th:href="@{/search}" class="button">Prenota</a>
             <div class="trip-list">
                 <!--/*@thymesVar id="trip" type="it.uniroma3.siw.flyAway.model.Trip"*/-->
                 <div class="card trip" th:each="trip : ${tripList}">
                     <div class="card-header">
                         <a th:href="@{'/trip' + '/' + ${trip.id}}" href="">
-                            <h1 th:text="${trip.city.name}">Roma</h1>
+                            <h1 th:text="${trip.accommodation.address.city.name}">Roma</h1>
                             <h2 th:text="${trip.accommodation.name}">Hilton</h2>
-                            <p>Dal<span th:text="${trip.startDate}">15/07/2021</span> al <span
+                            <p>Dal <span th:text="${trip.startDate}">15/07/2021</span> al <span
                                     th:text="${trip.endDate}">21/07/2021</span></p>
                         </a>
                     </div>
