--- a/src/main/resources/templates/user/updateTrip.html
+++ b/src/main/resources/templates/user/updateTrip.html
@@ -5,10 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:href="@{/css/updateTrip.css}" href="../../static/css/updateTrip.css">
     <title>Document</title>
 </head>
 <body>
-<div>
+
+<div class="container">
     <p>Stai per prenotare, ecco i dettagli</p>
     <div>
         <p th:text="*{trip.user.name}">Matteo Galdi</p>
@@ -18,16 +20,20 @@
         <p th:text="|*{trip.accommodation.address.street} *{trip.accommodation.address.streetNumber}|">indirizzo
             hotel</p>
     </div>
-    <form th:action="@{/trip/new/{id}(id=${trip.accommodation.id})}" method="post">
-        <label for="input1">Dal</label>
-        <input type="date" id="input1" th:field="*{trip.startDate}">
+    <div class="card">
+        <form th:action="@{/trip/update/{id}(id=${trip.id})}" method="post">
+            <label for="input1">Dal</label>
+            <input type="date" id="input1" th:field="*{trip.startDate}">
 
-        <label for="input2">Al</label>
-        <input type="date" id="input2" th:field="*{trip.endDate}">
+            <label for="input2">Al</label>
+            <input type="date" id="input2" th:field="*{trip.endDate}">
 
-        <button type="submit">Prenota</button>
-        <button type="reset">Annulla</button>
-    </form>
+
+            <button type="submit">Aggiorna</button>
+            <button type="reset">Annulla</button>
+        </form>
+    </div>
 </div>
+
 </body>
 </html>
