--- a/src/main/resources/templates/user/tripForm.html
+++ b/src/main/resources/templates/user/tripForm.html
@@ -5,29 +5,38 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:href="@{/css/updateTrip.css}" href="../../static/css/updateTrip.css">
     <title>Document</title>
 </head>
 <body>
-<div>
-    <p>Stai per prenotare, ecco i dettagli</p>
-    <div>
-        <p th:text="*{trip.user.name}">Matteo Galdi</p>
-        <p th:text="*{trip.accommodation.name}">Nome hotel</p>
-        <p th:text="*{trip.accommodation.type.description}">Tipo hotel</p>
-        <p th:text="*{trip.accommodation.type.animalsAllowed}">Animali ammessi</p>
-        <p th:text="|*{trip.accommodation.address.street} *{trip.accommodation.address.streetNumber}|">indirizzo
-            hotel</p>
+<div class="container">
+    <div class="grid">
+        <div class="card">
+            <div class="card-header">
+                <p>Ecco i dettagli per la tua prenotazione</p>
+            </div>
+            <div class="details">
+                <p th:text="|*{trip.user.name} *{trip.user.surname}|">Matteo Galdi</p>
+                <p th:text="*{trip.accommodation.name}">Nome hotel</p>
+                <p th:text="*{trip.accommodation.type.description}">Tipo hotel</p>
+                <p th:if="*{trip.accommodation.type.animalsAllowed}">Animali ammessi</p>
+                <p th:if="*{!trip.accommodation.type.animalsAllowed}">Animali non ammessi</p>
+                <p th:text="|*{trip.accommodation.address.street} *{trip.accommodation.address.streetNumber}|">indirizzo
+                    hotel</p>
+            </div>
+            <form th:action="@{/trip/new/{id}(id=${trip.accommodation.id})}" method="post">
+                <label for="input1">Dal</label>
+                <input type="date" id="input1" th:field="*{trip.startDate}">
+
+                <label for="input2">Al</label>
+                <input type="date" id="input2" th:field="*{trip.endDate}">
+
+
+                <button class="button" type="submit">Conferma</button>
+                <button class="button" type="reset">Annulla</button>
+            </form>
+        </div>
     </div>
-    <form th:action="@{/trip/new/{id}(id=${trip.accommodation.id})}" method="post">
-        <label for="input1">Dal</label>
-        <input type="date" id="input1" th:field="*{trip.startDate}">
-
-        <label for="input2">Al</label>
-        <input type="date" id="input2" th:field="*{trip.endDate}">
-
-        <button type="submit">Prenota</button>
-        <button type="reset">Annulla</button>
-    </form>
 </div>
 </body>
 </html>
